--- a/client/views/accueilTemplate.html
+++ b/client/views/accueilTemplate.html
@@ -1,6 +1,15 @@
 <template name="accueilTemplate">
 	<div class="container">
-		<h1>This is accueil Template</h1>
+		<div class="jumbotron">
+        <h2>Simulez votre consommation électrique et faites des économies</h2>
+        <p class="lead">En quelques cliques, renseignez votre consommation électrique et commencez à faire des économies sur votre facture électrique.</p>
+        <p><a class="btn btn-lg btn-success" href="{{pathFor 'simulationTemplate'}}" role="button">COMMENCER</a></p>
+      </div>
+
+      
+      
+
+      
 	</div>	
 	
 	
