--- a/client/views/simulationTemplate.html
+++ b/client/views/simulationTemplate.html
@@ -17,7 +17,7 @@
       <div class="col-md-8">
         <h4>Lister vos appareils ici pour estimer votre consommation annuelle :</h4><br /><br />
           <div class="row form1">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <select class="nom_device form-control" name="nom-device"> 
                          <option value="valeur1">Ampoule</option> 
                          <option value="valeur2">Four</option> 
@@ -36,16 +36,18 @@
             <div class="col-md-3">
         <input type="email" class="form-control puissance_device" placeholder="Puissance Watts">
            </div> 
-            <div class="col-md-2">
+            <div class="col-md-3">
           <input type="email" class="form-control duree_device" placeholder="Durée h/j">
               </div> 
-            <div class="col-md-2">
-          <button type="button" class="btn btn-danger">-</button>
-       </div> 
+            
         </div>
         <br /><br />
         <button type="button" class="btn btn-success ajouter_device">Ajouter</button>
         <br /><br /><br /><br />
+        {{#each devices}}
+        <span>{{ deviceName }} - {{ devicePuissance }} - {{ dureeDevice }} </span>
+        
+        {{/each}}
         <button type="button" class="btn btn-success">Calculer</button>
       </div>
       
