added graphics chart.js

--- a/client/views/simulationTemplate.html
+++ b/client/views/simulationTemplate.html
@@ -72,9 +72,10 @@
       </table>      
         <p class="well">Votre facture électrique annuelle est évaluée à : {{somme_conso}} EUR</p>
         
+        
       </div>
       
     </div> 
-
+{{> templateChart}}
   </div>
 </template>  
